# vscode-dbt-power-user

./: .c8rc.json  .eslintrc.json  .gitignore  .gitpod.yml  .mcp.json  .nycrc.json  .prettierignore  .prettierrc.json  .vscodeignore  CAPITALIZATION_FIX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCPReadme.md  MCPServer.MD  MCPServer.md  MCP_USAGE.md  README.md  REVIEW.md  TESTING_IMPROVEMENTS.md  altimate_notebook_kernel.py  codecov.yml  dbt_cloud_integration.py  dbt_core_integration.py  dbt_healthcheck.py  dbt_integration.py  dbt_utils.py  debugExt.py  ext_troubleshooter.py  jest.config.js  language-configuration.json  mcp-server.js  mkdocs.yml  node_python_bridge.py  package-lock.json  package.json  package.nls.json  playwright.config.ts  postInstall.js  (+14 more)
.claude/: settings.json
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
altimate_actions/: codicon.css  index.html  main.js  style.css
docker-setup/: Dockerfile  README.md  deploy-isolated.sh  deploy.sh  docker-compose.override.yml  docker-compose.yml  launch-pinned.sh  start-code-server.sh  vsix-smoke.sh
docs/: index.md
docs_edit_panel/: main.js  (+2 more)
test-fixtures/jaffle-shop-duckdb/: .devcontainer.json  .gitignore  .sqlfluff  Dockerfile  README.md  RELEASE.md  dbt_project.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
test-fixtures/jaffle-shop-duckdb/.github/: CODEOWNERS
test-fixtures/jaffle-shop-duckdb/.github/workflows/: validate_on_platforms.yml
test-fixtures/jaffle-shop-duckdb/models/: overview.md  schema.yml
(+1273 files in other folders)
